zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__copy_preserves_multiple_tabs_in_line.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 4053
expression: "format!(\"{:?}\", grid)"
---
00 (C): a	b	c	d
01 (C): 
02 (C): 
03 (C): 
04 (C): 
05 (C): 
06 (C): 
07 (C): 
08 (C): 
09 (C): 

