zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__tabs_render_correctly_after_tabstop_change.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 4295
expression: "format!(\"{:?}\", grid)"
---
00 (C): a	b
01 (C): x	y
02 (C): 
03 (C): 
04 (C): 
05 (C): 
06 (C): 
07 (C): 
08 (C): 
09 (C): 

